# BloodOrchid

./: .gitattributes  .gitignore  BUILD.bazel  CODEBASE.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  agents.md  architecture.md  channel_config.toml  commit_message.md  contracts.md  system_evolution.md
.cursor/rules/: 00-core.md  01-boundaries.md  02-build-order.md  03-test-and-verification.md
.determinism_output/: baseline_hash.txt  hashes.txt  run_6.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: architecture-enforcement.yml  restructure.yml
.opencode/commands/: audit.md  build-graph.md  readiness.md  runtime-sim.md
apps/cli/: BUILD.bazel  Cargo.toml  build.rs  mves_demo.sh
apps/cli/src/: lib.rs  main.rs  observability.rs  simulation_manager.rs
apps/cli/tests/: architecture_test.rs  bypass_detection.rs  mves_e2e.rs  pipeline_tests.rs
boundary/: README.md
boundary-core/src/: contracts.rs
boundary/crates/boundary-cve/src/: lib.rs
boundary/runtime/: BUILD.bazel  Cargo.toml  build.rs
boundary/runtime/src/: boundary.rs  invariants.rs  kernel.rs  lib.rs  mod.rs  proto.rs
boundary/runtime/tests/: kernel_benchmark.rs
causal/: README.md
channels/: serialization.rs  structural_dispatcher.rs
channels/tests/: integration_test.rs
contracts/: .contract_manifest.sha256  Cargo.toml  README.md  build.rs  compatibility.md  test_matrix.md  verify_bindings.sh
contracts/boundary_invariants/: BUILD.bazel  contracts.proto
contracts/elixir_federation/: federation.proto
contracts/proto/: BUILD.bazel  mves.proto  structural.proto
contracts/python_causal/: causal.proto
contracts/shared/: envelope.proto  errors.proto  streaming.proto  versioning.proto
contracts/src/: lib.rs
contracts/timescaledb/: storage.proto
cve/core/: BUILD.bazel  Cargo.toml
cve/core/src/: lib.rs  proto.rs
db/: README.md
docs/: agents.md  architecture.md  contracts.md  decisions.md  diagrams.md  phase8_design.md  reproduce.md
docs/agent_packs/codex/: low_level_impl.md
docs/agent_packs/gemini/: cross_module_reasoning.md
docs/agent_packs/opencode/: quickstart.md
docs/agent_packs/zed/: refactor_audit.md
echoinfra/: README.md
edge/: README.md
factory/structural/: Cargo.toml
factory/structural/src/: factory.rs  lib.rs  node.rs
factory/structural/tests/: integration.rs
federation/: README.md
federation/elixir/: mix.exs
federation/elixir/lib/: federation.ex
federation/elixir/lib/vail_iris_federation/: commit_proof.ex  snapshot_proposal.ex  voter.ex
federation/elixir/lib/vail_iris_federation/state/: store.ex
hyperlattice/: README.md
infra/: README.md
invariants/: README.md
invariants/ocaml/: BUILD.bazel  causal.ml  dune  invariant_gate.ml  invariant_gate.mli  policy.ml  topological.ml
invariants/ocaml/utils/: helpers.ml
kernel/: README.md
kernel/cuda/: BUILD.bazel  cuda_launch.hpp  cuda_support_stub.cpp
kernel/include/veiliris/kernel/core/: bootstrap.h
kernel/include/veiliris/kernel/core/memory/: memory_manager.h
kernel/include/veiliris/kernel/core/runtime/: execution_engine.h
kernel/include/veiliris/kernel/core/solver/: heat_2d_solver.h
kernel/include/veiliris/kernel/ffi/: kernel_c_api.h
kernel/pde_ref/: BUILD.bazel  CMakeLists.txt  README.md  adaptive_stepper.hpp  advanced_solver.cpp  advanced_solver.hpp  all.hpp  boundary_conditions.hpp  cache.hpp  cfl_condition.hpp  config_manager.cpp  config_manager.hpp  error_estimator.hpp  event_dispatcher.hpp  fdm_operator.hpp  field_operations.hpp  file_io.cpp  file_io.hpp  grid_utils.hpp  implicit_solver.hpp  interpolator.hpp  kernel.cc  kernel_optimized.cc  logger.cpp  logger.hpp  main.cpp  memory_allocator.cpp  memory_allocator.hpp  multigrid_solver.hpp  operator_splitting.hpp  parallel_executor.hpp  pde_factory.hpp  profiler.cpp  profiler.hpp  random_generator.hpp  serialization.hpp  solver_registry.hpp  spectral_methods.hpp  state_manager.hpp  telemetry.hpp  (+2 more)
kernel/pde_ref/benchmarks/: benchmark_solver.cpp
kernel/pde_ref/config/: pde_config.txt
kernel/pde_ref/tests/: test_solver.cpp
kernel/pde_ref/wrappers/: python_bindings.cpp
kernel/src/core/bootstrap/: init.c
kernel/src/core/memory/: memory_manager.c
kernel/src/core/registry/: solver_registry.c
kernel/src/core/runtime/: execution_engine.c
kernel/src/core/scheduler/: task_scheduler.c
kernel/src/core/solver/: heat_2d_solver.c  heat_2d_solver_full.c
kernel/src/ffi/: rust_bridge.c
kernel/src/io/: file_dispatcher.c
kernel/src/network/: socket_layer.c
kernel/tests/: test_framework.hpp
ml/python/: BUILD.bazel  causal_layer.py
ml/python/ai/: decision_engine.py
ml/python/api/: bridge_client.py
ml/python/config/: system_config.py
ml/python/orchestrator/: main.py  retry_engine.py  state_manager.py  task_router.py
scripts/: arch_lint.sh  check_determinism.sh  ci_pipeline.sh
storage/timescaledb/: BUILD.bazel  schema.sql
storage/timescaledb/migrations/: 001_init.down.sql  001_init.up.sql
studio/: README.md
tests/: README.md
tests/architecture/: dependency_test.rs
tests/integration/: BUILD.bazel  run_all.sh
tests/invariants/: BUILD.bazel  run_all.sh
tests/kernel/: BUILD.bazel  cuda_launch_test.cpp  test_main.cpp
