[package]
name = "mves-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
boundary-runtime = { path = "../../boundary/runtime" }
cve-core = { path = "../../cve/core" }
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "mves_cli"
path = "src/lib.rs"

[[bin]]
name = "mves_demo"
path = "src/main.rs"

