[package]
name = "boundary-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "boundary_runtime"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vail-iris-contracts = { path = "../../contracts" }
prost = "0.13"
bytes = "1"

