[package]
name = "structural"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-build = "0.12"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
