package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cuda_stub",
    srcs = ["cuda_support_stub.cpp"],
    hdrs = ["cuda_launch.hpp"],
    includes = ["."],
)

filegroup(
    name = "cuda_srcs",
    srcs = [
        "cuda_launch.hpp",
        "cuda_support_stub.cpp",
    ],
)
